fixing topn invisible items few fixes on basic search

--- a/frontend/src/app/shared/modules/dynamic-widgets/components/topn-widget/topn-widget.component.scss
+++ b/frontend/src/app/shared/modules/dynamic-widgets/components/topn-widget/topn-widget.component.scss
@@ -108,7 +108,7 @@
             }
 
             .chart {
-                display: flex;
+                // display: flex;
                 flex: 1;
                 position: relative;
                 overflow: overlay;
